--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+    <div class="caja">
+
     <div id="cookieModal" class="modal">
         <div class="modal-content">
             <p class="cookiestext">Este sitio web utiliza cookies para mejorar la experiencia del usuario. Para poder acceder a nuestro sitio, necesitas aceptar nuestras cookies.</p>
@@ -242,6 +244,9 @@
     <footer><!--se crea pie de la página-->
         <h9>&copy; 2024 Cecytem Coacalco - Todos los derechos reservados</h9>
     </footer>
+
+    
+    </div>
 
 
     <script>
